5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1590_1014.log
== TEST (2019-03-26 19:17:58) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = var1//100*30 	

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:21:10) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = (var1) // 100*30 	

-- EXECUTION TIME:
0.143594
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:21:46) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = (var1) // 100*30 	

print(float(lucro,2))

-- EXECUTION TIME:
0.157802
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 5, in <module>
    print(float(lucro,2))
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:21:48) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = (var1) // 100*30 	

print(float(lucro,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(lucro,2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:23:32) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = (var1) // 100*30 	

print(lucro,2)

-- OUTPUT:
210.0 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:23:45) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = (var1) // 100*30 	

print(lucro,2)

-- OUTPUT:
210.0 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:24:27) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = (var1) // 100*30 	

print(int(lucro,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int(lucro,2))
TypeError: int() can't convert non-string with explicit base
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:26:13) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = (var1) // 100*30 	

print(round(lucro,2))

-- OUTPUT:
210.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:26:53) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = (var1) // 100*30 	

print(round(lucro,2))

-- EXECUTION TIME:
0.163655
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:28:53) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = 30//100 * (var1) 


print(round(lucro,2)

-- ERROR:
File "XXXX", line 7
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:29:14) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = 30//100 * (var1) 


print(round(lucro,2))

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:29:40) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = 30//100 * (var1) 


print(round(lucro,2))

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:30:09) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = (var1) // (30//100) 


print(round(lucro,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lucro = (var1) // (30//100) 
ZeroDivisionError: float divmod()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:01:50) 
-- CODE:
var1 = float(input("Qual o total de vendas?"))
 
lucro = var1 * 0.3


print(round(lucro,2))

-- EXECUTION TIME:
0.13548
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
